Tue May 26 17:09:00 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * tao/Transport.h:
        * tao/IIOP_Transport.h:
        * tao/Transport.cpp:
        * tao/IIOP_Transport.cpp:
        * tests/Bug_3647_Regression/client.cpp:
        * tests/Bug_3647_Regression/Middle_Impl.cpp:
        * tests/Bug_3647_Regression/Middle_Impl.h:
        * tests/Bug_3647_Regression/middle_server.cpp:
        * tests/Bug_3647_Regression/Test.idl:
        * tests/Bug_3647_Regression/Backend_Impl.cpp:
        * tests/Bug_3647_Regression/run_test.pl:
        * tests/Bug_3647_Regression/Backend_Impl.h:
          Fix fuzz problems, tabs, indentation in perl scripts, the Id
          stuff, etc.

Tue May 26 11:25:03 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tao/Transport.h:
        * tao/IIOP_Transport.h:
        * tao/IIOP_Transport.cpp:
          I had the signature of sendfile() completely wrong in
          IIOP_Transport.  Lucky for me, Johnny pointed out the warnings
          in the Solaris10_Studio12_Debug build.
          I also had to move the io_timeout() function in Tranport to the
          protected section.  This whole sendfile() thing looks like a
          hack.

        * tao/Transport.cpp:
          Fix Unicode build problem.  Again, thanks to Johnny for keeping
          an eye out for me.

Tue May 26 09:26:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug 3672 regression as not fixed

Mon May 25 19:05:22 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * Fixed bug #3647.  In this commit I am merging the changes form
          the Bug_3647_Regression branch.  The exact command used to merge
          the changes was:
          $ svn merge --accept postpone -r85163:HEAD \
              https://svn.dre.vanderbilt.edu/DOC/Middleware/\
              branches/Bug_3647_Regression .

          The typical conflict in the ChangeLog was manually resolved.

        * bin/tao_orb_tests.lst: